--- a/django_tutorial/templates/base.html
+++ b/django_tutorial/templates/base.html
@@ -12,9 +12,17 @@
     <title>Hello, pybo!</title>
 </head>
 <body>
+    <!-- 네비게이션 바 -->
+    {% include "navbar.html" %}
     <!-- 기본 템플릿 안에 삽입될 내용 Start -->
     {% block content %}
     {% endblock content %}
     <!-- 기본 템플릿 안에 삽입될 내용 End -->
+    <!-- Bootstrap JS -->
+    <script src="{% static "bootstrap.min.js" %}"></script>
+    <!-- 자바스크립트 Start -->
+    {% block script %}
+    {% endblock script %}
+    <!-- 자바스크립트 end -->
 </body>
 </html>
